--- a/WorkHourPlus.Repositories/WorkHourPlus.Repositories.csproj
+++ b/WorkHourPlus.Repositories/WorkHourPlus.Repositories.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\WorkHourPlus.Contracts\WorkHourPlus.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    </ItemGroup>
+
 </Project>
